# brain-tumor-classification

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: cd.yaml  ci.yaml
config/: config.yaml
research/: 01_data_ingestion.ipynb  02_prepare_base_model.ipynb  03_model_trainer.ipynb  04_model_evaluation.ipynb
src/cnnClassifier/components/: data_ingestion.py  model_evaluation.py  model_trainer.py  prepare_base_model.py
src/cnnClassifier/config/: configuration.py
src/cnnClassifier/entity/: config_entity.py
src/cnnClassifier/pipeline/: prediction.py  stage_02_prepare_base_model.py  stage_04_model_evaluation.py
static/: script.js  style.css
templates/: index.html
